colocando links correctos

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,12 +29,12 @@
           </span>
 
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+            <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
             <li class="navbar-item">
               <a href="../pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
-              <a href="../pages/filmGridFavourite.html">Favourite</a>
+              <a href="../pages/filmFavourites.html">Favourite</a>
             </li>
             <li class="navbar-item">
               <input
@@ -58,7 +58,7 @@
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
@@ -80,7 +80,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
@@ -102,7 +102,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
@@ -125,7 +125,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
@@ -147,7 +147,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
@@ -169,7 +169,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img
@@ -194,7 +194,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
@@ -216,7 +216,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
@@ -238,7 +238,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
@@ -260,7 +260,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
@@ -282,7 +282,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/inside.jpg" alt="Picture of Rocky" />
@@ -304,7 +304,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/madMaxNew.jpg" alt="Picture of Rocky" />
@@ -333,7 +333,7 @@
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
@@ -355,7 +355,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
@@ -377,7 +377,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
@@ -400,7 +400,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
@@ -422,7 +422,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/inside.jpg" alt="Picture of Inside Out" />
@@ -444,7 +444,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/madMaxNew.jpg" alt="Picture of Mad Max" />
