--- a/pages/login.html
+++ b/pages/login.html
@@ -19,16 +19,16 @@
           <div class="login-input-zone">
             <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
-            <a href="../pages/index.html"
-              ><input class="login-input button" type="button" value="Log In"
-            /></a>
+            <a href="../pages/index.html" class="login-link">
+              <input class="login-input button" type="button" value="Log In"/>
+            </a>
           </div>
           <div class="login-forgot">
             Forgot password?</a>
           </div>
         </div>
         <div class="login-signup">
-          Don't have an account? <a href="../pages/pageNotFound.html">Sign Up</a>
+          Don't have an account? <a href="../pages/pageNotFound.html" class="login-link">Sign Up</a>
         </div>
       </div>
     </section>
