--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -23,18 +23,18 @@
           </label>
           <a href="#"><h1>rootdevs</h1></a>
           <span class="logo">
-            <a href="/">
+            <a href="../pages/index.html">
               <img class="logo-img" src="../img/logo.svg" alt="Logo" />
             </a>
           </span>
 
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+            <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
             <li class="navbar-item">
-              <a href="../pages/filmGrid.html">Films</a>
+              <a href="../pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
-              <a href="../pages/filmGridFavourite.html">Favourite</a>
+              <a href="../pages/filmFavourites.html">Favourite</a>
             </li>
             <li class="navbar-item">
               <input
