--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -26,12 +26,12 @@
         </span>
 
         <ul class="navbar-list">
-          <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+          <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
           <li class="navbar-item">
             <a href="../pages/index.html">Films</a>
           </li>
           <li class="navbar-item">
-            <a href="../pages/filmGridFavourite.html">Favourite</a>
+            <a href="../pages/filmFavourites.html">Favourite</a>
           </li>
           <li class="navbar-item">
             <input id="search" class="search-input" type="search" placeholder="Search" />
