--- a/pages/filmFavourites.html
+++ b/pages/filmFavourites.html
@@ -29,12 +29,12 @@
           </span>
 
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+            <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
             <li class="navbar-item">
               <a href="../pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
-              <a href="../pages/filmGridFavourite.html">Favourite</a>
+              <a href="../pages/filmFavourites.html">Favourite</a>
             </li>
             <li class="navbar-item">
               <input
