--- a/pages/filmNews.html
+++ b/pages/filmNews.html
@@ -29,12 +29,12 @@
           </span>
 
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+            <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
             <li class="navbar-item">
               <a href="../pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
-              <a href="../pages/filmGridFavourite.html">Favourite</a>
+              <a href="../pages/filmFavourites.html">Favourite</a>
             </li>
             <li class="navbar-item">
               <input
@@ -58,7 +58,7 @@
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
@@ -80,7 +80,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
@@ -102,7 +102,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
@@ -125,7 +125,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
@@ -147,7 +147,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/inside.jpg" alt="Picture of Inside Out" />
@@ -169,7 +169,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilm">
+          <a href="../pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/madMaxNew.jpg" alt="Picture of Mad Max" />
