error ortografico en footer solucionado

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -14,9 +14,9 @@
   <body>
     <footer class="footer">
       <div class="container-footer">
-        <p>Got feedback?, This web is open source!.</p>
+        <p>Got feedback? This web is open source!.</p>
         <p>
-          Exercise for learn Html5 & CSS3 by
+          Exercise for learning HTML5 & CSS3 by
           <a href="https://keepcoding.io/" target="_blank" rel="noreferrer noopener">
             <strong>Keepcoding!</strong>
           </a>
