--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -67,9 +67,11 @@
           <p><strong class="article-strong">Score:</strong> 9/10</p>
           <h2 class="article-strong">Sinopsis:</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ratione!
-            Praesentium voluptates alias odit architecto soluta sint sed, asperiores non!
-            Eos, cum earum odit dignissimos accusamus harum quidem! Dolores, magni.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis laborum,
+            veniam suscipit, cum impedit rem tenetur, saepe sit dicta quos sequi? Quos
+            consequatur facere quo? Labore tenetur nobis dignissimos dolor possimus,
+            adipisci corporis dolore natus dicta placeat expedita iusto earum repellendus
+            enim ipsum delectus. Praesentium ratione dolorem maiores tempore nobis!
           </p>
           <h2 class="article-subTitle">Actors:</h2>
           <div class="article-container">
@@ -109,7 +111,6 @@
 
       <aside class="aside-similar">
         <h1 class="aside-title">Similar movies:</h1>
-        <hr class="aside-hr-line" />
 
         <div class="aside-container">
           <a href="#" class="aside-film">
@@ -120,6 +121,9 @@
           </a>
           <a href="#" class="aside-film">
             <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="Name Film" />
+          </a>
+          <a href="#" class="aside-film">
+            <img class="aside-img" src="../img/films/starWars.jpg" alt="Name Film" />
           </a>
         </div>
       </aside>
