--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -76,32 +76,32 @@
           <h2 class="article-subTitle">Actors:</h2>
           <div class="article-container">
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
             </span>
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
             </span>
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
             </span>
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
             </span>
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
             </span>
             <span>
-              <a href="#">
+              <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
             </span>
