terminada pagina descritiva de las peliculas, nombres actores centrados

--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -75,35 +75,41 @@
           </p>
           <h2 class="article-subTitle">Actors:</h2>
           <div class="article-container">
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Javier</p>
             </span>
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Jéssica</p>
             </span>
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Eva</p>
             </span>
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Fran</p>
             </span>
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Carmen</p>
             </span>
-            <span>
+            <span class="article-span">
               <a href="#" class="article-actor">
                 <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
               </a>
+              <p class="article-name">Sergio</p>
             </span>
           </div>
         </article>
