--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/navbar.css" />
-    <link rel="stylesheet" href="../css/icomoon.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/icomoon.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Web Pelis</title>
   </head>
@@ -23,18 +23,18 @@
           </label>
           <a href="#"><h1>rootdevs</h1></a>
           <span class="logo">
-            <a href="../pages/index.html">
-              <img class="logo-img" src="../img/logo.svg" alt="Logo" />
+            <a href="pages/index.html">
+              <img class="logo-img" src="img/logo.svg" alt="Logo" />
             </a>
           </span>
 
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="../pages/filmNews.html">News</a></li>
+            <li class="navbar-item"><a href="pages/filmNews.html">News</a></li>
             <li class="navbar-item">
-              <a href="../pages/index.html">Films</a>
+              <a href="pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
-              <a href="../pages/filmFavourites.html">Favourite</a>
+              <a href="pages/filmFavourites.html">Favourite</a>
             </li>
             <li class="navbar-item">
               <input
@@ -45,7 +45,7 @@
               />
             </li>
             <li class="navbar-item">
-              <a href="../pages/pageNotFound.html">
+              <a href="pages/pageNotFound.html">
                 <button class="link-button">Sign Out</button>
               </a>
             </li>
@@ -58,10 +58,10 @@
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+                <img src="img/films/futurama.jpg" alt="Picture of Futurama" />
               </figure>
 
               <div class="gridfilms-description">
@@ -80,10 +80,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
+                <img src="img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
               </figure>
 
               <div class="gridfilms-description">
@@ -102,10 +102,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
+                <img src="img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
               </figure>
 
               <div class="gridfilms-description">
@@ -125,10 +125,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+                <img src="img/films/starWars.jpg" alt="Picture of Star Wars" />
               </figure>
 
               <div class="gridfilms-description">
@@ -147,10 +147,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
+                <img src="img/films/batmanBeyond.jpg" alt="Picture of Batman" />
               </figure>
 
               <div class="gridfilms-description">
@@ -169,13 +169,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img
-                  src="../img/films/reservoirDogs.jpg"
-                  alt="Picture of Reservoir Dogs"
-                />
+                <img src="img/films/reservoirDogs.jpg" alt="Picture of Reservoir Dogs" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -194,10 +191,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
+                <img src="img/films/theWolf.jpg" alt="Picture of The Wolf" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -216,10 +213,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
+                <img src="img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-full"></i>
@@ -238,10 +235,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
+                <img src="img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -260,10 +257,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
+                <img src="img/films/rocky.jpg" alt="Picture of Rocky" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-full"></i>
@@ -282,10 +279,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/inside.jpg" alt="Picture of Rocky" />
+                <img src="img/films/inside.jpg" alt="Picture of Rocky" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -304,10 +301,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/madMaxNew.jpg" alt="Picture of Rocky" />
+                <img src="img/films/madMaxNew.jpg" alt="Picture of Rocky" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-full"></i>
@@ -333,10 +330,10 @@
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+                <img src="img/films/futurama.jpg" alt="Picture of Futurama" />
               </figure>
 
               <div class="gridfilms-description">
@@ -355,10 +352,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
+                <img src="img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
               </figure>
 
               <div class="gridfilms-description">
@@ -377,10 +374,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
+                <img src="img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
               </figure>
 
               <div class="gridfilms-description">
@@ -400,10 +397,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+                <img src="img/films/starWars.jpg" alt="Picture of Star Wars" />
               </figure>
 
               <div class="gridfilms-description">
@@ -422,10 +419,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/inside.jpg" alt="Picture of Inside Out" />
+                <img src="img/films/inside.jpg" alt="Picture of Inside Out" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -444,10 +441,10 @@
             </article>
           </a>
 
-          <a href="../pages/movieDescription.html" class="gridfilm">
+          <a href="pages/movieDescription.html" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/madMaxNew.jpg" alt="Picture of Mad Max" />
+                <img src="img/films/madMaxNew.jpg" alt="Picture of Mad Max" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-full"></i>
