enlace a favicon correcto

--- a/pages/filmFavourites.html
+++ b/pages/filmFavourites.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="stylesheet" href="../css/filmFavourites.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Web Pelis</title>
   </head>
   <body>
