--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/login.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Log In</title>
   </head>
   <body>
